[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/zorque.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/MenuLayer.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0.160784, 0.635294, 0.211765, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="MenuLayer" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 3 )

[node name="CurrentScoreLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 126.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0.113725, 0.976471, 0.270588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score: "

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 832.0
margin_top = 16.0
margin_right = 1024.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0.113725, 0.976471, 0.270588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Prev Best: 0"

[node name="NumOrganisms" type="Label" parent="."]
margin_left = 8.0
margin_top = 478.0
margin_right = 225.0
margin_bottom = 563.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Active 
organisms:"

[node name="NumObstacles" type="Label" parent="."]
margin_left = 8.0
margin_top = 376.0
margin_right = 157.0
margin_bottom = 431.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Available
obstacles:"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 171.0
margin_right = 827.0
margin_bottom = 600.0

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]

[node name="GameOverRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_right = -256.0
color = Color( 0.054902, 0, 1, 1 )

[node name="GameOverMenu" type="GridContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -280.0
margin_top = 16.0
margin_right = -32.0
margin_bottom = -328.0
rect_scale = Vector2( 2, 2 )
columns = 3

[node name="placeholder" type="Label" parent="GameOverMenu"]
margin_top = 15.0
margin_right = 57.0
margin_bottom = 46.0
text = "
"
align = 1

[node name="GameOverLabel" type="Label" parent="GameOverMenu"]
margin_left = 61.0
margin_right = 204.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER
"
align = 1

[node name="placeholder2" type="Label" parent="GameOverMenu"]
margin_left = 208.0
margin_top = 15.0
margin_right = 248.0
margin_bottom = 46.0
text = "
"
align = 1

[node name="placeholder3" type="Label" parent="GameOverMenu"]
margin_top = 65.0
margin_right = 57.0
margin_bottom = 96.0
text = "
"
align = 1

[node name="HighScoreEndGame" type="Label" parent="GameOverMenu"]
margin_left = 61.0
margin_top = 65.0
margin_right = 204.0
margin_bottom = 96.0
text = "
"
align = 1

[node name="placeholder4" type="Label" parent="GameOverMenu"]
margin_left = 208.0
margin_top = 65.0
margin_right = 248.0
margin_bottom = 96.0
text = "
"
align = 1

[node name="placeholder5" type="Label" parent="GameOverMenu"]
margin_top = 106.0
margin_right = 57.0
margin_bottom = 137.0
text = "
"
align = 1

[node name="Score" type="Label" parent="GameOverMenu"]
margin_left = 61.0
margin_top = 100.0
margin_right = 204.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "Score: 
"
align = 1

[node name="placeholder6" type="Label" parent="GameOverMenu"]
margin_left = 208.0
margin_top = 106.0
margin_right = 248.0
margin_bottom = 137.0
text = "
"
align = 1

[node name="placeholder7" type="Label" parent="GameOverMenu"]
margin_top = 147.0
margin_right = 57.0
margin_bottom = 178.0
text = "
"
align = 1

[node name="placeholder8" type="Label" parent="GameOverMenu"]
margin_left = 61.0
margin_top = 147.0
margin_right = 204.0
margin_bottom = 178.0
text = "
"
align = 1

[node name="placeholder9" type="Label" parent="GameOverMenu"]
margin_left = 208.0
margin_top = 147.0
margin_right = 248.0
margin_bottom = 178.0
text = "
"
align = 1

[node name="RestartButton" type="Button" parent="GameOverMenu"]
margin_top = 182.0
margin_right = 57.0
margin_bottom = 213.0
text = "Restart"
icon_align = 1

[node name="placeholder10" type="Label" parent="GameOverMenu"]
margin_left = 61.0
margin_top = 182.0
margin_right = 204.0
margin_bottom = 213.0
text = "
"
align = 1

[node name="QuitButton" type="Button" parent="GameOverMenu"]
margin_left = 208.0
margin_top = 182.0
margin_right = 248.0
margin_bottom = 213.0
text = "Quit"
icon_align = 1

[connection signal="endGameFromMenu" from="OptionsMenu" to="." method="_on_OptionsMenu_endGameFromMenu"]
[connection signal="pressed" from="GameOverMenu/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameOverMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
